--- a/package.json
+++ b/package.json
@@ -15,8 +15,13 @@
     "@auth/core": "0.37.0",
     "@convex-dev/auth": "^0.0.87",
     "@hookform/resolvers": "^5.1.1",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@tabler/icons": "^3.34.1",
     "@tabler/icons-react": "^3.34.1",
@@ -24,6 +29,8 @@
     "clsx": "^2.1.1",
     "convex": "^1.25.4",
     "convex-helpers": "^0.1.99",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.9",
     "gsap": "^3.13.0",
     "lucide-react": "^0.525.0",
     "next": "14.2.15",
