--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@react-email/components": "0.3.2",
     "@tabler/icons": "^3.34.1",
     "@tabler/icons-react": "^3.34.1",
     "class-variance-authority": "^0.7.1",
@@ -34,25 +35,28 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.9",
     "gsap": "^3.13.0",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.525.0",
     "next": "14.2.15",
     "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.60.0",
+    "resend": "^4.7.0",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^4.0.5"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.15"
+    "eslint-config-next": "14.2.15",
+    "postcss": "^8",
+    "react-email": "4.2.4",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
